<resources>
    <string name="app_name">Mangatana</string>
    <string name="media_fr_tab_manga">Manga</string>
    <string name="media_fr_tab_anime">Anime</string>
    <string name="fr_ongoing_title">Ongoing</string>
    <string name="fr_backlog_title">Backlog</string>
    <string name="fr_finished_title">Finished</string>
    <string name="fr_starred_title">Starred</string>
    <string name="fr_explore_title">Explore</string>
    <string name="fr_in_ongoing_sub">Stuff you are going through right now</string>
    <string name="fr_backlog_sub">Series you plan on catching up later</string>
    <string name="fr_finished_sub">Series you’re already done with</string>
    <string name="fr_starred_sub">Your personal favourites</string>
    <string name="fr_explore_sub">Find something new for yourself</string>
    <string name="fr_about_app">About app</string>
    <string name="fr_about_media">About</string>

    <string name="carousel_recent">Recent activity</string>

    <string name="media_cover">Media Cover</string>
    <string name="media.move_to_finished.btn">To Finished</string>
    <string name="media.move_to_backlog.btn">To Backlog</string>
    <string name="media.add_to_ongoings_btn">To Ongoings</string>
    <string name="media_about">About</string>
    <string name="media_favorite">Marked as a favorite</string>
    <string name="media_action_result">Marked as \"%1$s\"</string>

    <string name="media_list_find_new">Explore new titles</string>
    <string name="media_list_reload">Reload</string>

    <string name="error_message">Error:\n%1$s</string>
    <string name="empty_result_message">There\'s nothing here…</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete Entry</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_clear">Clear the database</string>
    <string name="dialog_delete_message">Are you sure you want to delete this entry?</string>
    <string name="dialog_clear_message">Are you sure you want to delete all your entries?</string>

    <string name="clear_button_text">Clear all data</string>
    <string name="data_menu">Data</string>
    <string name="content">Content</string>
    <string name="look_and_feel">Look and feel</string>
    <string name="fr_settings">Settings</string>
    <string name="status_ongoing">Ongoing</string>
    <string name="status_finished">Finished</string>
    <string name="status_backlog">In backlog</string>
    <string name="open_browser">Open in browser</string>
    <string name="share_to">Share to…</string>
    <string name="open_with">Open with…</string>

    <string name="settings_color_theme">Color Theme</string>
    <string name="settings_color_vanilla">Vanilla</string>
    <string name="settings_color_chocolate">Chocolate</string>
    <string name="settings_clear_sub">Delete all saved titles</string>
    <string name="settings_clear_all">Clear all data</string>

    <string name="about_feedback">Provide feedback</string>
    <string name="about_github" translatable="false">Github</string>
    <string name="about_twitter" translatable="false">Twitter</string>
    <string name="about_email" translatable="false">Email</string>

    <string name="by_aredruss" translatable="false">
       by Aredruss
    </string>

    <string-array name="statuses">
        <item>@string/status_ongoing</item>
        <item>@string/status_backlog</item>
        <item>@string/status_finished</item>
    </string-array>

    <string-array name="locales">
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <string-array name="color_themes">
        <item>Vanilla</item>
        <item>Chocolate</item>
    </string-array>

</resources>