<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.aredruss.mangatana.view.util.views.CategoryButton
        android:id="@+id/in_progress_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_ongoing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subText="@string/fr_in_ongoing_sub"
        app:text="@string/fr_ongoing_title" />

    <com.aredruss.mangatana.view.util.views.CategoryButton
        android:id="@+id/up_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_up_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_progress_btn"
        app:subText="@string/fr_backlog_sub"
        app:text="@string/fr_backlog_title" />

    <com.aredruss.mangatana.view.util.views.CategoryButton
        android:id="@+id/finished_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_check_finished"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/up_next_btn"
        app:subText="@string/fr_finished_sub"
        app:text="@string/fr_finished_title" />

    <com.aredruss.mangatana.view.util.views.CategoryButton
        android:id="@+id/starred_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:icon="@drawable/ic_starred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finished_btn"
        app:subText="@string/fr_starred_sub"
        app:text="@string/fr_starred_title" />

    <com.aredruss.mangatana.view.util.views.CategoryButton
        android:id="@+id/explore_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starred_btn"
        app:subText="@string/fr_explore_sub"
        app:text="@string/fr_explore_title" />

    <TextView
        android:id="@+id/debug_menu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/debug_menu_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/explore_btn"
        app:layout_constraintTop_toBottomOf="@id/explore_btn" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/clear_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debug_menu_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>