<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_outline"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/status_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/progress_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_radio_button"
            android:button="@null"
            android:drawableEnd="@drawable/ic_progress"
            android:drawablePadding="20dp"
            android:layoutDirection="rtl"
            android:paddingEnd="10dp"
            android:text="@string/status_ongoing"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/backlog_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_radio_button"
            android:button="@null"
            android:drawableEnd="@drawable/ic_backlog"
            android:drawablePadding="20dp"
            android:layoutDirection="rtl"
            android:paddingEnd="10dp"
            android:text="@string/fr_backlog_title"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/finished_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_radio_button"
            android:button="@null"
            android:drawableEnd="@drawable/ic_finished"
            android:drawablePadding="20dp"
            android:layoutDirection="rtl"
            android:paddingEnd="10dp"
            android:text="@string/status_finished"
            android:textSize="18sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>