<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_tb"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@id/label_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/label_tv" />

        <TextView
            android:id="@+id/label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/fr_about_media"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="10dp"
            android:src="@drawable/ic_share"
            android:tint="@color/mainIconTint"
            app:layout_constraintBottom_toBottomOf="@id/label_tv"
            app:layout_constraintEnd_toStartOf="@id/details_menu_ib"
            app:layout_constraintTop_toTopOf="@id/label_tv" />

        <ImageButton
            android:id="@+id/details_menu_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/info_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/details_tb"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading_av"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_cl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/media_title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_primary"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="TITLE" />

                <ImageView
                    android:id="@+id/cover_iv"
                    android:layout_width="150dp"
                    android:layout_height="250dp"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/media_cover"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/media_title_tv"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/author_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_primary"
                    android:ellipsize="end"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cover_iv"
                    app:layout_constraintTop_toTopOf="@id/cover_iv"
                    tools:text="Author|Producer placeholder" />

                <ImageView
                    android:id="@+id/rating_icon_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_star"
                    app:layout_constraintStart_toEndOf="@id/cover_iv"
                    app:layout_constraintTop_toBottomOf="@id/author_tv" />

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/rating_icon_iv"
                    app:layout_constraintStart_toEndOf="@id/rating_icon_iv"
                    app:layout_constraintTop_toTopOf="@id/rating_icon_iv"
                    tools:text="Rating" />

                <TextView
                    android:id="@+id/year_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/secondaryText"
                    app:layout_constraintBottom_toBottomOf="@id/rating_icon_iv"
                    app:layout_constraintStart_toEndOf="@id/rating_tv"
                    app:layout_constraintTop_toTopOf="@id/rating_icon_iv"
                    tools:text="1999" />

                <ImageButton
                    android:id="@+id/like_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/cover_iv"
                    app:layout_constraintEnd_toEndOf="@id/cover_iv"
                    android:src="@drawable/ic_favorite_border" />

                <TextView
                    android:id="@+id/status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_status"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@id/rating_icon_iv"
                    app:layout_constraintTop_toBottomOf="@id/rating_icon_iv"
                    tools:text="status placeholder" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/genre_cg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:visibility="gone"
                    style="@style/Widget.MaterialComponents.ChipGroup"
                    android:layout_margin="15dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/cover_iv" />

                <com.aredruss.mangatana.view.util.views.CollapseTextView
                    android:id="@+id/about_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="20dp"
                    app:arrow_drawable="@drawable/ic_arrow_right"
                    app:bg_drawable_regular="@drawable/bg_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genre_cg"
                    app:title_text="@string/media_about" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.aredruss.mangatana.view.util.views.InfoMessageView
                android:id="@+id/info_mv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:visibility="gone"
                app:info_icon="@drawable/error_logo"
                app:info_text="@string/error_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <io.github.kobakei.materialfabspeeddial.FabSpeedDial
        android:id="@+id/actions_fab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTintMode="add"
        app:fab_extraMargin="0dp"
        app:fab_fabBackgroundColor="@color/colorAccent"
        app:fab_fabDrawable="@null"
        app:fab_fabDrawableTint="@color/mainIconTint"
        app:fab_menu="@menu/menu_save"
        app:fab_miniFabBackgroundColor="@color/colorAccent"
        app:fab_miniFabDrawableTint="@color/mainIconTint"
        app:fab_miniFabTextBackground="@drawable/bg_primary"
        app:fab_miniFabTextColor="@color/mainIconTint" />

</RelativeLayout>

